# Haskell-morse

./: morse.cabal
src/: Main.hs  Morse.hs
tests/: tests.hs
