name:                morse
version:             0.1.0.0
license-file:        LICENSE
author:              Cojoj
maintainer:          example@example.com
copyright:           2017 Cojoj
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       morse,
                       QuickCheck
  ghc-options:         -Wall -fwarn-tabs

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5,
                       containers,
                       QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       containers,
                       morse,
                       QuickCheck
  default-language:    Haskell2010
